--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,9 +7,21 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-list>
-    <ion-item *ngFor="let pokemon of pokemonList">
-      <ion-label>{{pokemon.name | titlecase}}</ion-label>
-    </ion-item>
-  </ion-list>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6" *ngFor="let pokemon of pokemonList">
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>{{pokemon.name | titlecase}}</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <ion-thumbnail>
+              <img [src]="pokemon.sprites.front_default" alt="{{pokemon.name}}" />
+            </ion-thumbnail>
+            <p>Types: {{ getPokemonTypes(pokemon) }}</p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
